Merge holidays if they overlap